# Alma-update-expired-users-emails

./: .gitignore  README.md  pyproject.toml  update_expired_user_emails.py
config/: email_update_config.example.json
docs/: DEV_MIGRATION.md
examples/: sample_users.tsv
historical_logs/2025-08/: email_update_config_19082025_from_tsv.json  email_update_config_from_tsv.json
historical_logs/2026-03/: domain_filtered_users_20260303.txt  email_update_results_dry_run_20260301_152334.csv
scripts/: smoke_project.py
tests/: test_imports.py
