[tool.poetry]
name = "alma-update-expired-users-emails"
version = "1.0.0"
description = "Script for updating email addresses of expired users in Alma ILS"
authors = ["Hagay Bar-Or <hagaybar@tauex.tau.ac.il>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
# AlmaAPITK package from GitHub (pinned to release tag)
almaapitk = { git = "https://github.com/hagaybar/AlmaAPITK.git", tag = "v0.2.0" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
